<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.quarkiverse</groupId>
    <artifactId>quarkiverse-parent</artifactId>
    <version>15</version>
  </parent>
  <groupId>io.quarkiverse.langchain4j</groupId>
  <artifactId>quarkus-langchain4j-parent</artifactId>
  <version>999-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Quarkus LangChain4j - Parent</name>
  <modules>
    <module>chroma</module>
    <module>core</module>
    <module>docs</module>
    <module>hugging-face</module>
    <module>bam</module>
    <module>watsonx</module>
    <module>milvus</module>
    <module>ollama</module>
    <module>openai/azure-openai</module>
    <module>openai/openai-common</module>
    <module>openai/openai-vanilla</module>
    <module>openshift-ai</module>
    <module>pinecone</module>
    <module>redis</module>
    <module>pgvector</module>
  </modules>
  <scm>
    <connection>scm:git:git@github.com:quarkiverse/quarkus-langchain4j.git</connection>
    <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-langchain4j.git</developerConnection>
    <url>https://github.com/quarkiverse/quarkus-langchain4j</url>
    <tag>HEAD</tag>
  </scm>
  <properties>
    <compiler-plugin.version>3.12.1</compiler-plugin.version>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <quarkus.version>3.7.0</quarkus.version>
    <langchain4j.version>0.25.0</langchain4j.version>
    <langchain4j-embeddings.version>0.25.0</langchain4j-embeddings.version>
    <quarkus-poi.version>2.0.4</quarkus-poi.version> <!-- we need to use this version because langchain4j uses POI 5.2.3 instead of 5.2.5 and the substitution needed is different in the two versions -->
    <assertj.version>3.25.2</assertj.version>
    <wiremock.version>3.3.1</wiremock.version>
    <pgvector-java.version>0.1.4</pgvector-java.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${quarkus.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-maven-plugin</artifactId>
          <version>${quarkus.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compiler-plugin.version}</version>
          <configuration>
            <compilerArgs>
              <arg>-parameters</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>net.revelc.code</groupId>
          <artifactId>impsort-maven-plugin</artifactId>
          <version>${version.impsort.plugin}</version>
          <configuration>
            <compliance>17</compliance>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <profiles>
    <profile>
      <id>it</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>!true</value>
        </property>
      </activation>
      <modules>
        <module>integration-tests</module>
      </modules>
    </profile>

    <profile>
      <id>samples</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>!true</value>
        </property>
      </activation>
      <modules>
        <module>samples/email-a-poem</module>
        <module>samples/review-triage</module>
        <module>samples/fraud-detection</module>
        <module>samples/chatbot</module>
        <module>samples/csv-chatbot</module>
      </modules>
    </profile>
  </profiles>
</project>
